# dx-spotter

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  build_app.sh  build_docs.sh  conftest.py  docstring_queries.txt  pskspotter.py  pyproject.toml  requirements.txt
docs/: conf.py  configuration.rst  display.rst  index.rst  usage.rst
docs/api/: adif_log.rst  appconfig.rst  dxspotter.rst  main_window.rst  settings_dialog.rst  spot_window.rst  wsjtx_listener.rst
src/: adif_log.py  appconfig.py  commander_client.py  dxspotter.py  main_window.py  pskspotter.py  settings_dialog.py  spot_window.py  test_rigctld.py  test_rumlog_cat.py  version.py  wsjtx_listener.py
src/icons/: dxspot.icns
src/tools/: adif_dedup.py
tests/tools/: commander_client.py  test_DXCommander_socket.py  test_adif_dedup.py
