[project]
name = "pskspotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama",
    "pyhamtools",
    "paho.mqtt",
    "pyqtgraph>=0.14.0",
    "pyqt6>=6.11.0",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
]
