[project]
name = "dx-spotter"
version = "0.1.0"
description = "program to collect spots from psk reporter and wsjt-x, and display them in a nice way, with comparisons to an adif log file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama",
    "pyhamtools",
    "paho.mqtt",
    "pyqtgraph>=0.14.0",
    "pyqt6>=6.11.0",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
]
